--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,17 +17,17 @@
           <span class="sr-only">Next</span>
         </a>
         <h1>
-          DiscoverING <br>
-          SOMETHING <br>
-          NEW BRAND
+          Unlimited <br>
+          image editing<br>
+          <span style="text-transform: lowercase; font-weight: lighter; font-size:40px;">at</span> $89<span style="text-transform: lowercase; font-weight: lighter; font-size:25px;">/week</span>
         </h1>
-        <p>
-          It is a long established fact that a reader will be distracted by the readable content of a page when
-          looking at its layout. The point of using Lorem
-        </p>
+        <h4 style="margin-top: 40px;">
+          Clipping-path | Masking | Color-Correction | Retouching | Manipulation <br>
+          and Much more
+        </h4>
         <div>
           <a href="" class="slider-link">
-            CONTACT US
+            CHECK PRICING
           </a>
         </div>
       </div>
@@ -35,13 +35,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/assets/images/slider-img.jpg" alt="">
+              <img src="/assets/images/slider-1.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="/assets/images/slider-img.jpg" alt="">
+              <img src="/assets/images/slider-2.jpg" alt="">
             </div>
             <div class="carousel-item">
-              <img src="/assets/images/slider-img.jpg" alt="">
+              <img src="/assets/images/slider-3.jpg" alt="">
             </div>
           </div>
 
@@ -68,41 +68,60 @@
             
             <div class="custom_heading-container">        
               <h1>
-                Industries <span>Reserve</span> 
+                Industries We <span>Serve</span> 
                 
               </h1>
 
             </div>
             <div class="custom_heading-container">
-                <h2>take your business to next level</h2>
+                <h3>With our years of experience, we serve a wide range of industries</h3>
             </div>
+
+
             <!-- <p>
               It is a long established fact that a reader will be distracted by the readable content of a page when
               looking at its layout. The point of using Lorem
             </p> -->
             <div class="industries-container">
-                <hr>
+                
                 <div class="industries-specific">
-                    <a href=""><img src="/assets/images/Google-logo.png"></a>
+                    <a href="" style="float: left; width: 40%;"><img src="/assets/images/bed.png" style="width: 100%;" ></a>
+                  
+                    <p style="text-align: center; margin-top: 20px; font-weight: bold; float: left; margin-left: 10px;">Furniture</p>
+                    
+                    
                 </div>
                 <div class="industries-specific">
-                    <a href=""><img src="/assets/images/Clutch_logo.v1.jpg"></a>
+                    <a href="" style="float: left; width: 40%;"><img src="/assets/images/car.png" style="width: 100%;"></a>
+                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;">Automobiles</p>
                 </div>
                 <div class="industries-specific">
-                    <a href=""><img src="/assets/images/Google-logo.png"></a>
+                    <a href="" style="float: left; width: 40%;"><img src="/assets/images/fashion.png" style="width: 100%;"></a>
+                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;">Fashion</p>
                 </div>
                 <div class="industries-specific">
-                    <a href=""><img src="/assets/images/Clutch_logo.v1.jpg"></a>
+                    <a href="" style="float: left; width: 40%;"><img src="/assets/images/monitor.png" style="width: 100%;"></a>
+                    <p style="text-align: center; margin-top: 25px;font-weight: bold; float: left;margin-left: 10px;">E-commerce</p>
                 </div>
                 <div class="industries-specific">
-                    <a href=""><img src="/assets/images/Google-logo.png"></a>
+                    <a href="" style="float: left; width: 40%;"><img src="/assets/images/african.png" style="width: 100%;"></a>
+                    <p style="text-align: center; margin-top: 25px;font-weight: bold; float: left;margin-left: 10px;">Jewellery</p>
                 </div>
                 <div class="industries-specific">
-                    <a href=""><img src="/assets/images/Clutch_logo.v1.jpg"></a>
+                    <a href="" style="float: left; width: 40%;"><img src="/assets/images/photographer.png" style="width: 100%;"></a>
+                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;">Photographers</p>
                 </div>
 
-                <hr style="float: left;">
+                
               
+            </div>
+
+            <div class="industries-content">
+              <p style="font-size: 25px; font-weight: bold; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-left: 10px; margin-right: 10px; "><span style="color: blueviolet; font-size: 27px;">If</span> you don't see your specific industry mentioned here, don't worry.<br><span style="color: blueviolet;font-size: 27px;">We</span>
+                are continuously working hard to add new industries with our years of experience, We serve 
+                a wide range of industries
+              </p>
+
             </div>
 
 
@@ -126,7 +145,7 @@
         <div class="custom_heading-container">
           <hr>
           <h2>
-            why choose editing factory?
+            WHY CHOOSE EDITING FACTORY?
           </h2>
 
         </div>
@@ -140,12 +159,12 @@
         <a href="">
           <div class="box">
             <div class="img-box">
-              <img src="/assets/images/stunning-designs.svg" alt="" class="img-1">
+              <img src="/assets/images/graphic-designer.png" alt="" class="img-1" style="width: 100%;">
               <!-- <img src="/assets/images/s1-blue.png" alt="" class="img-2"> -->
             </div>
             <div class="name">
               <h6>
-                Stunning Designs
+                Expert Image Editors
               </h6>
             </div>
           </div>
@@ -153,13 +172,12 @@
         <a href="">
           <div class="box">
             <div class="img-box">
-              <img src="/assets/images/customer-support.svg" alt="" class="img-1">
+              <img src="/assets/images/timer.png" alt="" class="img-1" style="width: 100%;">
               <!-- <img src="/assets/images/s2-blue.png" alt="" class="img-2"> -->
             </div>
             <div class="name">
               <h6>
-                11/10 Customer
-Support
+                On-time Delivery
               </h6>
             </div>
           </div>
@@ -167,13 +185,12 @@ Support
         <a href="">
           <div class="box">
             <div class="img-box">
-              <img src="/assets/images/50+strong-team.svg" alt="" class="img-1">
+              <img src="/assets/images/support.png" alt="" class="img-1" style="width: 100%;">
               <!-- <img src="/assets/images/s3-blue.png" alt="" class="img-2"> -->
             </div>
             <div class="name">
               <h6>
-                10+ Years
-Experience
+                Awesome Costumer support
               </h6>
             </div>
           </div>
@@ -181,13 +198,12 @@ Experience
         <a href="">
           <div class="box">
             <div class="img-box">
-              <img src="/assets/images/fast-and-responsive.svg" alt="" class="img-1">
+              <img src="/assets/images/photoshop.png" alt="" class="img-1" style="width: 100%;">
               <!-- <img src="/assets/images/s4-blue.png" alt="" class="img-2"> -->
             </div>
             <div class="name">
               <h6>
-                Fast &
-Responsive
+                Unlimited Requests
               </h6>
             </div>
           </div>
@@ -195,13 +211,12 @@ Responsive
         <a href="">
           <div class="box">
             <div class="img-box">
-              <img src="/assets/images/50+strong-team.svg" alt="" class="img-1" >
+              <img src="/assets/images/profit.png" alt="" class="img-1" style="width: 100%;">
               <!-- <img src="/assets/images/s5-blue.png" alt="" class="img-2"> -->
             </div>
             <div class="name">
               <h6>
-                50+ Strong
-Team
+                Flat Rate Pricing
               </h6>
             </div>
           </div>
@@ -388,60 +403,11 @@ Team
       <!-- end client section -->
 
       
- <!-- contact section -->
 
- <section class="contact_section layout_padding-bottom">
+
+  <!-- info section -->
+  <section class="info_section layout_padding">
     <div class="container">
-      <div class="d-flex flex-column align-items-end">
-        <div class="custom_heading-container">
-          <hr>
-          <h2>
-            Contact Us
-          </h2>
-        </div>
-      </div>
-      <div class="layout_padding-top layout_padding2-bottom">
-        <div class="row">
-          <div class="col-md-7">
-            <form action="">
-              <div class="contact_form-container">
-                <div>
-                  <div>
-                    <input type="text" placeholder="Name">
-                  </div>
-                  <div>
-                    <input type="email" placeholder="Email">
-                  </div>
-                  <div>
-                    <input type="text" placeholder="Phone Number">
-                  </div>
-                  <div class="">
-                    <input type="text" placeholder="Message" class="message_input">
-                  </div>
-                  <div class="mt-5">
-                    <button type="submit">
-                      send
-                    </button>
-                  </div>
-                </div>
-
-              </div>
-
-            </form>
-          </div>
-          <div class="col-md-5">
-            <div class="map-box">
-              <div id="map">
-                <div class="map-responsive">
-                  <iframe
-                    src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
-                    width="600" height="300" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="contact_items">
 
         <a href="">
@@ -481,15 +447,6 @@ Team
           </div>
         </a>
       </div>
-    </div>
-  </section>
-
-
-  <!-- end contact section -->
-
-  <!-- info section -->
-  <section class="info_section layout_padding">
-    <div class="container">
       <div class="info_social">
         <div>
           <a href="">
@@ -512,12 +469,7 @@ Team
           </a>
         </div>
       </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </p>
-      </div>
+   
     </div>
   </section>
 
@@ -525,6 +477,8 @@ Team
 
   <!-- footer section -->
   <section class="container-fluid footer_section">
+
+ 
     <p>
       &copy; 2019 All Rights Reserved By
       <a href="https://html.design/">Free Html Templates</a>
