--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -114,7 +114,19 @@
   }
 
 
+  .industries-container .industries-specific{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 
+  .industries-container{
+    width: 100%;
+  }
+
+  .industries-content{
+    width: 100%;
+  }
 
 
   .subscribe_section form {
@@ -152,7 +164,11 @@
     left: 39%;
   }
 
-
+  .industries-container .industries-specific{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 
   .subscribe_section form {
     flex-direction: column;
@@ -172,9 +188,7 @@
 
 
 @media (max-width: 420px) {
-  .industries-container .industries-specific{
-    margin-left: 70px;
-  }
+
 }
 
 @media (max-width: 360px) {
