--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,13 @@ body {
 
 }
 
-.custom_heading-container h2{
+.custom_heading-container h3{
   color: darkgray; text-transform: uppercase; font-weight: bold;
 }
 
+.custom_heading-container h2{
+  color: darkgray; text-transform: uppercase; font-weight: bold;
+}
 .custom_heading-container hr {
   width: 100%;
   border: none;
@@ -65,33 +68,56 @@ body {
 }
 
 .industries-container{
-  width: 100%;
+  width: 60%;
   height: auto;
-  padding: 10px;
   margin-top: 20px;
+  float: left;
 }
 
-.industries-container hr{
+.industries-content{
+  width: 40%;
+  height: auto;
+  margin-top: 30px;
+  float: left;
+}
+
+/* .industries-container hr{
   width: 100%;
   height: 1.5px;
   color: darkgray;
-}
+} */
 
 .industries-container .industries-specific{
-  width: auto;
+  width: 30%;
+  margin-left: 1.666%;
+  margin-right: 1.666%;
+  margin-top: 50px;
   padding: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
   float: left;
-  height: 75px;
+  height: auto;
   background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0.1, 0.2);
-  
+  border-radius: 20px;
+  box-shadow: 0 5px 15px rgba(0.1, 0.3, 0.1, 0.3);
 
 }
+
+.industries-container .industries-specific p{
+  background: transparent ;
+  font-style: italic;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.industries-specific .over-industries{
+
+  position: absoulute;  
+  top:8px;
+  left: 16px;
+  
+}
+
+/* .industries-specific .overlay{
+  opacity: 0.7;
+} */
 
 /*header section*/
 .hero_area {
@@ -317,6 +343,7 @@ a:focus {
 
 .about_section .detail-box{
   width: 100%;
+  float: left;
 }
 
 .about_section .row {
@@ -398,6 +425,7 @@ a:focus {
 .service_section .box .img-box {
   width: 175px;
   height: 175px;
+  padding: 15px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   display: -webkit-box;
@@ -788,6 +816,7 @@ a:focus {
 }
 
 .contact_items {
+  padding: 50px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
