--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
           <span style="text-transform: lowercase; font-weight: lighter; font-size:40px;">at</span> $89<span style="text-transform: lowercase; font-weight: lighter; font-size:25px;">/week</span>
         </h1>
         <h4 style="margin-top: 40px;">
-          Clipping-path | Masking | Color-Correction | Retouching | Manipulation <br>
+          Clipping-path | Masking | Color-Correction | <br>Retouching | Manipulation <br>
           and Much more
         </h4>
         <div>
