--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,29 +87,29 @@
                 <div class="industries-specific">
                     <a href="" style="float: left; width: 40%;"><img src="/assets/images/bed.png" style="width: 100%;" ></a>
                   
-                    <p style="text-align: center; margin-top: 20px; font-weight: bold; float: left; margin-left: 10px;">Furniture</p>
+                    <p style="text-align: center; margin-top: 20px; font-weight: bold; float: left; margin-left: 10px; font-style: normal;">Furniture</p>
                     
                     
                 </div>
                 <div class="industries-specific">
                     <a href="" style="float: left; width: 40%;"><img src="/assets/images/car.png" style="width: 100%;"></a>
-                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;">Automobiles</p>
+                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;font-style: normal;">Automobiles</p>
                 </div>
                 <div class="industries-specific">
                     <a href="" style="float: left; width: 40%;"><img src="/assets/images/fashion.png" style="width: 100%;"></a>
-                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;">Fashion</p>
+                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;font-style: normal;">Fashion</p>
                 </div>
                 <div class="industries-specific">
                     <a href="" style="float: left; width: 40%;"><img src="/assets/images/monitor.png" style="width: 100%;"></a>
-                    <p style="text-align: center; margin-top: 25px;font-weight: bold; float: left;margin-left: 10px;">E-commerce</p>
+                    <p style="text-align: center; margin-top: 25px;font-weight: bold; float: left;margin-left: 10px;font-style: normal;">E-commerce</p>
                 </div>
                 <div class="industries-specific">
                     <a href="" style="float: left; width: 40%;"><img src="/assets/images/african.png" style="width: 100%;"></a>
-                    <p style="text-align: center; margin-top: 25px;font-weight: bold; float: left;margin-left: 10px;">Jewellery</p>
+                    <p style="text-align: center; margin-top: 25px;font-weight: bold; float: left;margin-left: 10px;font-style: normal;">Jewellery</p>
                 </div>
                 <div class="industries-specific">
                     <a href="" style="float: left; width: 40%;"><img src="/assets/images/photographer.png" style="width: 100%;"></a>
-                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;">Photographers</p>
+                    <p style="text-align: center; margin-top: 25px; font-weight: bold; float: left;margin-left: 10px;font-style: normal;">Photographers</p>
                 </div>
 
                 
@@ -145,13 +145,13 @@
         <div class="custom_heading-container">
           <hr>
           <h2>
-            WHY CHOOSE EDITING FACTORY?
+            OUR FEATURES
           </h2>
 
         </div>
-        <p>
+        <!-- <p>
           There are many variations of passages of Lorem Ipsum available, but the majority
-        </p>
+        </p> -->
       </div>
     </div>
     <div class="container">
@@ -177,7 +177,7 @@
             </div>
             <div class="name">
               <h6>
-                On-time Delivery
+                On-time Delivery, Everytime
               </h6>
             </div>
           </div>
@@ -203,7 +203,7 @@
             </div>
             <div class="name">
               <h6>
-                Unlimited Requests
+                Unlimited Requests <br> Revisions
               </h6>
             </div>
           </div>
@@ -294,7 +294,7 @@
         <div class="container">
           <div class="custom_heading-container">
             <h2>
-              What is Say Our Clients
+              What Our Clients Say
             </h2>
             <hr>
           </div>
@@ -405,85 +405,6 @@
       
 
 
-  <!-- info section -->
-  <section class="info_section layout_padding">
-    <div class="container">
-      <div class="contact_items">
 
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-2">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
-            </div>
-          </div>
-        </a>
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-3">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </a>
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-1">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                t will be distracted by the readable
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="info_social">
-        <div>
-          <a href="">
-            <img src="/assets/images/fb.png" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="/assets/images/twitter.png" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="/assets/images/linkedin.png" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="/assets/images/insta.png" alt="">
-          </a>
-        </div>
-      </div>
-   
-    </div>
-  </section>
-
-  <!-- end info_section -->
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-
- 
-    <p>
-      &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </section>
-  <!-- footer section -->
 
 
