--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -824,6 +824,10 @@ a:focus {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+
+  width: 100%;
+  height: auto;
+  float: left;
 }
 
 .contact_items .item {
@@ -955,6 +959,9 @@ a:focus {
   font-family: "Poppins", sans-serif;
   background-color: #021056;
   color: #ffffff;
+  float: left;
+  height: auto;
+  width: 100%;
 }
 
 .info_section .info_social {
@@ -965,6 +972,7 @@ a:focus {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto 20px auto;
+  margin-top: 50px;
 }
 
 .info_section .info_social img {
@@ -1108,6 +1116,23 @@ a:focus {
   margin-bottom: 0px;
   line-height: 50px;
 }
+.table-content-button{
+  width: 100%;
+  height: auto;
+  background-color: #1e025b;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  float: left;
+  transition: all 0.3s ease-in-out;
+}
+.table-content-button:hover{
+
+  background-color: #2b05df;
+  transition: all 0.3s ease-in-out;
+
+}
+
+
 .table-entry .entry-price{
   width: 100%;
   padding: 20px;
@@ -1160,6 +1185,41 @@ a:focus {
   margin-bottom: 0;
   padding: 20px;
 }
+.mobile-table p{
+  color: darkslateblue;
+  display: none;
+}
+/* .buy-button{
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  height: auto;
+  float: left;
+  background-color: darkslateblue;
+  transition: all 0.4s ease-in-out;
+  /* margin-top: -30%;
+  z-index: 10; */
+  border-radius: 20px;
+}
+.buy-button:hover{
+  background-color: darkblue;
+  transition: all 0.4s ease-in-out;
+}
+.buy-button-container{
+  background-color: transparent;
+  height: auto;
+  width: 100%;
+  float: left;
+}
+.buy-button-container-2{
+  background-color: transparent;
+  height: auto;
+  width: 24%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  float: left;
+
+} */
 
 
 /* faq css */
@@ -1194,3 +1254,25 @@ a:focus {
 
 
 /* faq css end */
+
+
+.footer-division{
+  width: 25%;
+  float: left;
+  height: auto;
+}
+.footer-division h3{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: white;
+  text-align: center;
+  font-weight: bolder;
+}
+.footer-division a{
+  color: white;
+  text-align: center;
+  line-height: 40px;
+}
+.footer-division a:hover{
+  color: cadetblue;
+}
