--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -1,6 +1,64 @@
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
+
+      <div class="footer-division">
+
+        <h3>
+          The Editing Factory
+        </h3>
+        <p>
+          For far away, behind the far mountains, far from the countries
+        </p>
+        <div class="info_social">
+          <div>
+            <a href="">
+              <img src="/assets/images/fb.png" alt="">
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img src="/assets/images/twitter.png" alt="">
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img src="/assets/images/linkedin.png" alt="">
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img src="/assets/images/insta.png" alt="">
+            </a>
+          </div>
+        </div>
+        
+
+      </div>
+
+      <div class="footer-division">
+        <h3>Community</h3>
+        <a href="">Properties</a><br>
+        <a href="">For Agents</a><br>
+        <a href="">Reviews</a><br>
+        <a href="">FAQs</a>
+      </div>
+      <div class="footer-division">
+        <h3>About us</h3>
+        <a href="">Our Team</a><br>
+        <a href="">Our Story</a><br>
+        <a href="">Careers</a><br>
+        <!-- <a href="">FAQs</a> -->
+      </div>
+      <div class="footer-division">
+        <h3>Company</h3>
+        <a href="">About us</a><br>
+        <a href="">Press</a><br>
+        <a href="">Contact</a><br>
+        <a href="">Careers</a>
+      </div>
+      
+
       <div class="contact_items">
 
         <a href="">
@@ -39,101 +97,6 @@
             </div>
           </div>
         </a>
-      </div>
-
-
-    <div class="container-fluid text-center text-md-left" style="margin-bottom: 50px;">
-  
-      <!-- Grid row -->
-      <div class="row">
-  
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
-  
-          <!-- Content -->
-          <h5 class="text-uppercase">The Editing Factory</h5>
-          <p>Here you can use rows and columns to organize your footer content.Here you can use rows and columns to organize your footer content.Here you can use rows and columns to organize your footer content.</p>
-  
-        </div>
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none pb-3">
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">About us</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Reviews</a>
-            </li>
-            <li>
-              <a href="#!">Team</a>
-            </li>
-            <li>
-              <a href="#!">FAQs</a>
-            </li>
-            <li>
-              <a href="#!">Portfolio</a>
-            </li>
-          </ul>
-  
-        </div>
-        <!-- Grid column -->
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">Community</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Career</a>
-            </li>
-            <li>
-              <a href="#!">Copyright</a>
-            </li>
-            <li>
-              <a href="#!">Contact</a>
-            </li>
-            <li>
-              <a href="#!">Sign up</a>
-            </li>
-          </ul>
-  
-        </div>
-        <!-- Grid column -->
-  
-      </div>
-      <!-- Grid row -->
-  
-    </div>
-
-  
-      <div class="info_social">
-        <div>
-          <a href="">
-            <img src="/assets/images/fb.png" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="/assets/images/twitter.png" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="/assets/images/linkedin.png" alt="">
-          </a>
-        </div>
-        <div>
-          <a href="">
-            <img src="/assets/images/insta.png" alt="">
-          </a>
-        </div>
       </div>
    
     </div>
