--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -120,6 +120,20 @@
     margin-left: 2.5%;
     margin-right: 2.5%;
   }
+  .mobile-table p{
+    color: darkslateblue;
+    display: block;
+  }
+  /* .buy-button-container-2{
+    background-color: transparent;
+    height: auto;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    float: left;
+  
+  } */
+  
 }
 
 @media (max-width: 768px) {
@@ -188,6 +202,9 @@
     transition: all 0.2s ease-in-out;
     border-radius: 20px;
   }
+  .footer-division{
+    width: 100%;
+  }
 
 }
 
@@ -234,6 +251,7 @@
   .slider_section .detail-box h1 {
     font-size: 2.5rem;
   }
+
 
 }
 
