--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -5,7 +5,7 @@
       <div class="footer-division">
 
         <h3>
-          The Editing Factory
+          <u>The Editing Factory</u>
         </h3>
         <p>
           For far away, behind the far mountains, far from the countries
@@ -37,21 +37,21 @@
       </div>
 
       <div class="footer-division">
-        <h3>Community</h3>
+        <h3><u>Community</u></h3>
         <a href="">Properties</a><br>
         <a href="">For Agents</a><br>
         <a href="">Reviews</a><br>
         <a href="">FAQs</a>
       </div>
       <div class="footer-division">
-        <h3>About us</h3>
+        <h3><u>About us</u></h3>
         <a href="">Our Team</a><br>
         <a href="">Our Story</a><br>
         <a href="">Careers</a><br>
         <!-- <a href="">FAQs</a> -->
       </div>
       <div class="footer-division">
-        <h3>Company</h3>
+        <h3><u>Company</u></h3>
         <a href="">About us</a><br>
         <a href="">Press</a><br>
         <a href="">Contact</a><br>
