--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -59,45 +59,7 @@
       </div>
       
 
-      <div class="contact_items">
-
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-2">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                +02 1234567890
-              </p>
-            </div>
-          </div>
-        </a>
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-3">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </a>
-        <a href="">
-          <div class="item ">
-            <div class="img-box box-1">
-
-            </div>
-            <div class="detail-box">
-              <p>
-                t will be distracted by the readable
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
+      
    
     </div>
   </section>
@@ -110,7 +72,7 @@
  
     <p>
       &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      <a href="">THE EDITING FACTORY</a>
     </p>
   </section>
   <!-- footer section -->
