--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1193,10 +1193,9 @@ a:focus {
   height: auto;
 }
 .active h3{
-  font-weight: bolder;
-  
-  
+  font-weight: bolder;  
 }
+
 .active{
   font-weight: bolder;
 }
@@ -1320,4 +1319,76 @@ a:focus {
 }
 .footer-division a:hover{
   color: cadetblue;
+}
+
+
+
+.services-banner{
+  width: 100%;
+  float: left;
+  height: auto;
+  background: linear-gradient(180deg, #a454fd, #2b05df);
+  
+}
+.services-element{
+  width: 100%;
+  height: auto;
+  float: left;
+}
+.services-card{
+  margin: 1.6666%;
+  width: 30%;
+  height: auto;
+  float: left;
+}
+.services-card img{
+  width: 100%;
+  height: 250px;
+}
+.services-card .services-content{
+  width: 100%;
+  padding: 15px;
+  float: left;
+  height: auto;
+}
+.services-card .services-content a{
+  color: black;
+  transition: all 0.3s ease-in-out;
+}
+.services-card .services-content a:hover{
+  color: #0000ff;
+  transition: all 0.3s ease-in-out;
+}
+.service-side-list{
+  height: auto;
+  float: left;
+  width: 24%;
+  margin: 1%;
+}
+.service-side-sp{
+  width: 100%;
+  height: auto;
+  float: left;
+  background-color: white;
+  transition: all 0.3s ease-in-out;
+}
+.service-side-sp h5{
+  text-align: center; 
+  color:black ; 
+  line-height: 50px;
+}
+.service-side-list .service-side-sp:hover{
+  background-color: #0000ff;
+  transition: all 0.3s ease-in-out;
+}
+.service-side-list .service-side-sp:hover h5{
+  color: white;
+}
+.service-content-sp{
+  width: 72%;
+  margin: 1%;
+  float: left;
+  height: auto;
+  border-radius: 40px;
+  box-shadow: 0 5px 15px rgba(0.1, 0.3, 0.1, 0.3);
 }
