--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1389,7 +1389,7 @@ a:focus {
   margin: 1%;
   float: left;
   height: auto;
-  border-radius: 40px;
+  border-radius: 20px;
   box-shadow: 0 5px 15px rgba(0.1, 0.3, 0.1, 0.3);
 }
 .service-content-sp h1{
@@ -1398,4 +1398,6 @@ a:focus {
 }
 .service-content-sp p{
   padding-left: 50px;
+  margin-bottom: 30px;
+  padding-right: 50px;
 }
