--- a/views/service.ejs
+++ b/views/service.ejs
@@ -56,32 +56,32 @@
 </div>
 
 <div class="service-content-sp" id="color-correction">
-    <h1 style="font-size: 40px; margin-bottom: 35px; padding-top: 50px; padding-left: 50px;">Color Correction</h1>
-    <p style="padding-left: 50px;">
+    <h1 style="font-size: 40px; margin-bottom: 35px;">Color Correction</h1>
+    <p >
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer adipiscing erat eget risus sollicitudin pellentesque et non erat. Maecenas nibh dolor, malesuada et bibendum a, sagittis accumsan ipsum. Pellentesque ultrices ultrices sapien.
 
 Nam scelerisque tristique dolor vitae tincidunt. Aenean quis massa uada mi elementum elementum. , nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo iaculis ligula, ac dapibus quam ornare ut. Praesent ac hendrerit sem, et tempus sem
     </p>
 </div>
 <div class="service-content-sp" id="masking">
-    <h1 style="font-size: 40px; margin-bottom: 35px; padding-top: 50px; padding-left: 50px;">Masking</h1>
-    <p style="padding-left: 50px;">
+    <h1 style="font-size: 40px; margin-bottom: 35px;">Masking</h1>
+    <p >
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer adipiscing erat eget risus sollicitudin pellentesque et non erat. Maecenas nibh dolor, malesuada et bibendum a, sagittis accumsan ipsum. Pellentesque ultrices ultrices sapien.
 
 Nam scelerisque tristique dolor vitae tincidunt. Aenean quis massa uada mi elementum elementum. , nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo iaculis ligula, ac dapibus quam ornare ut. Praesent ac hendrerit sem, et tempus sem
     </p>
 </div>
 <div class="service-content-sp" id="retouching">
-    <h1 style="font-size: 40px; margin-bottom: 35px; padding-top: 50px; padding-left: 50px;">Retouching</h1>
-    <p style="padding-left: 50px;">
+    <h1 style="font-size: 40px; margin-bottom: 35px; ">Retouching</h1>
+    <p >
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer adipiscing erat eget risus sollicitudin pellentesque et non erat. Maecenas nibh dolor, malesuada et bibendum a, sagittis accumsan ipsum. Pellentesque ultrices ultrices sapien.
 
 Nam scelerisque tristique dolor vitae tincidunt. Aenean quis massa uada mi elementum elementum. , nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo iaculis ligula, ac dapibus quam ornare ut. Praesent ac hendrerit sem, et tempus sem
     </p>
 </div>
 <div class="service-content-sp" id="clipping-path">
-    <h1 style="font-size: 40px; margin-bottom: 35px; padding-top: 50px; padding-left: 50px;">Clipping Path</h1>
-    <p style="padding-left: 50px;">
+    <h1 style="font-size: 40px; margin-bottom: 35px; ">Clipping Path</h1>
+    <p >
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer adipiscing erat eget risus sollicitudin pellentesque et non erat. Maecenas nibh dolor, malesuada et bibendum a, sagittis accumsan ipsum. Pellentesque ultrices ultrices sapien.
 
 Nam scelerisque tristique dolor vitae tincidunt. Aenean quis massa uada mi elementum elementum. , nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo iaculis ligula, ac dapibus quam ornare ut. Praesent ac hendrerit sem, et tempus sem
@@ -96,8 +96,8 @@ Nam scelerisque tristique dolor vitae tincidunt. Aenean quis massa uada mi eleme
     </p>
 </div>
 <div class="service-content-sp" id="misc">
-    <h1 style="font-size: 40px; margin-bottom: 35px; padding-top: 50px; padding-left: 50px;">Miscellaneous</h1>
-    <p style="padding-left: 50px;">
+    <h1 style="font-size: 40px; margin-bottom: 35px; ">Miscellaneous</h1>
+    <p >
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer adipiscing erat eget risus sollicitudin pellentesque et non erat. Maecenas nibh dolor, malesuada et bibendum a, sagittis accumsan ipsum. Pellentesque ultrices ultrices sapien.
 
 Nam scelerisque tristique dolor vitae tincidunt. Aenean quis massa uada mi elementum elementum. , nec tincidunt nunc posuere ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo iaculis ligula, ac dapibus quam ornare ut. Praesent ac hendrerit sem, et tempus sem
