--- a/views/login.ejs
+++ b/views/login.ejs
@@ -775,12 +775,11 @@ input.checkbox:checked:after {
 </style>
 
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 
   function checkPassword(form){
     p1=form.password.value;
     p2=form.password2.value;
-
     if(p1==p2){
       return true;
     }
@@ -790,7 +789,7 @@ input.checkbox:checked:after {
     }
   }
 
-</script>
+</script> -->
 
 
 
@@ -800,23 +799,13 @@ input.checkbox:checked:after {
     <h1>Creative SignUp Form</h1>
     <div class="main-agileinfo">
         <div class="agileits-top">
-            <form action="/register" method="post" onsubmit="return checkPassword(this)">
-                <input class="text" type="text" name="name" placeholder="Name" required="">
-                <input class="text email" type="email" name="email" placeholder="Email" required="">
-                <input class="text email" type="text" name="phone" placeholder="Phone number" required="">
+            <form action="/login" method="post" >
                 <input class="text" type="text" name="username" placeholder="Username" required="">
                 <input class="text email" type="password" name="password" placeholder="Password" required="">
-                <input class="text w3lpass" type="password" name="password2" placeholder="Confirm Password" required="">
-                <div class="wthree-text">
-                    <label class="anim">
-                        <input type="checkbox" class="checkbox" required="">
-                        <span>I Agree To The Terms & Conditions</span>
-                    </label>
-                    <div class="clear"> </div>
-                </div>
+               
                 <input type="submit" value="SIGNUP">
             </form>
-            <p>Don't have an Account? <a href="#"> Login Now!</a></p>
+            
         </div>
     </div>
     <!-- copyright -->
